2015-03-29 Pierre Wieser <pwieser@trychlos.org>

	Do not make OK/Validate GuidedInput buttons sensitive while all
	amounts are zero (todo #777).

	* src/core/ofs-ope.c: count generate-able entries.

	Review the reconciliation UI.

	* src/ui/ofa-date-filter-bin.c,
	* src/ui/ofa-date-filter-bin.h:
	new ofa_date_filter_bin_get_from_prompt() method.

	* src/ui/ofa-reconciliation.ui: new file.

	* src/ui/Makefile.am,
	* src/ui/ofa-reconciliation.c: updated accordingly.

	Update entries import/export to DBMS v25.

	* misc/convert/ebp_entries.pl: add missing fields.

	* src/api/ofo-concil.h,
	* src/core/ofo-concil.c:
	- ofo_concil_set_user(),
	- ofo_concil_set_stamp(): methods are now public.

	* src/core/ofa-iconcil.c,
	* src/core/ofa-iconcil.h: new ofa_iconcil_new_concil_ex() method.

	* src/core/ofo-entry.c: updated accordingly.

2015-03-28 Pierre Wieser <pwieser@trychlos.org>

	Have my_collate() function (todo #770).

	* src/api/my-utils.h,
	* src/core/my-utils.c: new my_collate() function.

	* src/core/ofo-account.c,
	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-settlement.c,
	* src/ui/ofa-view-entries.c: updated accordingly.

	Have an OPENBOOK_API_ prefix in all api headers (todo #762).

	* src/api/my-date.h,
	* src/api/my-double.h,
	* src/api/my-utils.h,
	* src/api/ofa-box.h,
	* src/api/ofa-dbms-def.h,
	* src/api/ofa-dbms.h,
	* src/api/ofa-dossier-misc.h,
	* src/api/ofa-idataset.h,
	* src/api/ofa-idbms.h,
	* src/api/ofa-iexportable.h,
	* src/api/ofa-iimportable.h,
	* src/api/ofa-ipreferences.h,
	* src/api/ofa-preferences.h,
	* src/api/ofa-settings.h,
	* src/api/ofo-account-def.h,
	* src/api/ofo-account.h,
	* src/api/ofo-base-def.h,
	* src/api/ofo-base-prot.h,
	* src/api/ofo-base.h,
	* src/api/ofo-bat-def.h,
	* src/api/ofo-bat-line.h,
	* src/api/ofo-bat.h,
	* src/api/ofo-class-def.h,
	* src/api/ofo-class.h,
	* src/api/ofo-concil-def.h,
	* src/api/ofo-concil.h,
	* src/api/ofo-currency-def.h,
	* src/api/ofo-currency.h,
	* src/api/ofo-dossier-def.h,